--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="products.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
-<body>
+<body data-page="products">
     <!-- Navigation -->
    <nav class="navbar">
   <div class="nav-container">
